--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_BASE_URL = https://admin-dashboard-fullstack-server-production.up.railway.app/
+REACT_APP_BASE_URL = https://dark-lime-anemone-cuff.cyclic.app/
